--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/common)
 include_directories(${PROJECT_SOURCE_DIR}/common/infra)
 include_directories(${PROJECT_SOURCE_DIR}/common/thirdparty)
+include_directories(${PROJECT_SOURCE_DIR}/common/thirdparty/msgpack)
 include_directories(${PROJECT_SOURCE_DIR}/common/common/mediafiles)
 include_directories(${PROJECT_SOURCE_DIR}/common/common/mediafiles/common/libmov/include)
 include_directories(${PROJECT_SOURCE_DIR}/common/middleware)
