--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ include_directories(${PROJECT_SOURCE_DIR}/common/common/mediafiles/common/libmov
 include_directories(${PROJECT_SOURCE_DIR}/common/middleware)
 include_directories(${PROJECT_SOURCE_DIR}/applicaton)
 include_directories(${PROJECT_SOURCE_DIR}/playsdk/third_party/ffmpeg/include)
+include_directories(${PROJECT_SOURCE_DIR}/playsdk/third_party/glad/include)
 
 #源文件
 set(APP_SOURCE_FILES)
