--- a/playsdk/CMakeLists.txt
+++ b/playsdk/CMakeLists.txt
@@ -1,8 +1,9 @@
 file(GLOB_RECURSE PLAYSDK_SOURCE_FILES src/*.cpp)
-
 file(GLOB_RECURSE PLAYSDK_SOURCE_HEADER_FILES src/*.h include/*.h third_party/*.h)
 
-set(APP_SOURCE_FILES ${APP_SOURCE_FILES} ${PLAYSDK_SOURCE_FILES} PARENT_SCOPE)
+file(GLOB_RECURSE GLAD_SOURCE_FILES third_party/glad/*.c)
+
+set(APP_SOURCE_FILES ${APP_SOURCE_FILES} ${PLAYSDK_SOURCE_FILES} ${GLAD_SOURCE_FILES} PARENT_SCOPE)
 set(APP_SOURCE_HEADER_FILES ${APP_SOURCE_HEADER_FILES} ${PLAYSDK_SOURCE_HEADER_FILES} PARENT_SCOPE)
 
 set(APP_INCLUDE_DIRS ${APP_INCLUDE_DIRS} 
@@ -11,3 +12,4 @@ set(APP_INCLUDE_DIRS ${APP_INCLUDE_DIRS}
 
 #多线程静态库
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MT")
+
