--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ include_directories(${PROJECT_SOURCE_DIR}/common/middleware)
 include_directories(${PROJECT_SOURCE_DIR}/applicaton)
 include_directories(${PROJECT_SOURCE_DIR}/playsdk/thirdparty/ffmpeg/include)
 include_directories(${PROJECT_SOURCE_DIR}/playsdk/thirdparty/glad/include)
+include_directories(${PROJECT_SOURCE_DIR}/playsdk/thirdparty)
 
 #源文件
 set(APP_SOURCE_FILES)
