--- a/playsdk/CMakeLists.txt
+++ b/playsdk/CMakeLists.txt
@@ -2,8 +2,9 @@ file(GLOB_RECURSE PLAYSDK_SOURCE_FILES src/*.cpp)
 file(GLOB_RECURSE PLAYSDK_SOURCE_HEADER_FILES src/*.h include/*.h thirdparty/*.h OpenAL/include/*h)
 
 file(GLOB_RECURSE GLAD_SOURCE_FILES thirdparty/glad/*.c)
+file(GLOB_RECURSE IMGUI_SOURCE_FILES thirdparty/imgui/*.cpp)
 
-set(APP_SOURCE_FILES ${APP_SOURCE_FILES} ${PLAYSDK_SOURCE_FILES} ${GLAD_SOURCE_FILES} PARENT_SCOPE)
+set(APP_SOURCE_FILES ${APP_SOURCE_FILES} ${PLAYSDK_SOURCE_FILES} ${GLAD_SOURCE_FILES} ${IMGUI_SOURCE_FILES} PARENT_SCOPE)
 set(APP_SOURCE_HEADER_FILES ${APP_SOURCE_HEADER_FILES} ${PLAYSDK_SOURCE_HEADER_FILES} PARENT_SCOPE)
 
 set(APP_INCLUDE_DIRS ${APP_INCLUDE_DIRS}
